--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "XUI is a set of experimental ui elements and utilities for frontend web development.",
   "main": "src/index.js",
   "scripts": {
-    "build": "babel lib -d build",
-    "lint": "eslint lib/**; exit 0",
-    "lint:watch": "esw -w lib/**",
+    "dev": "webpack -p --colors -w",
+    "build": "webpack -p",
     "prepublish": "npm run build"
   },
   "repository": {
@@ -21,14 +20,18 @@
   "homepage": "https://github.com/bilo-io/xui#readme",
   "devDependencies": {
     "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.4",
+    "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.5.3",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
-    "webpack": "^3.4.1"
+    "webpack": "^3.4.1",
+    "webpack-dev-server": "^2.6.1"
   }
 }
