--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "bilo-xui",
-  "version": "0.0.1",
+  "name": "bilo-ui",
+  "version": "0.0.3",
   "description": "XUI is a set of experimental ui elements and utilities for frontend web development.",
   "main": "dist/index.js",
   "scripts": {
@@ -10,14 +10,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/bilo-io/xui.git"
+    "url": "git+https://github.com/bilo-io/bilo-ui.git"
   },
   "author": "Bilo Lwabona",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/bilo-io/xui/issues"
+    "url": "https://github.com/bilo-io/bilo-ui/issues"
   },
-  "homepage": "https://github.com/bilo-io/xui#readme",
+  "homepage": "https://github.com/bilo-io/bilo-ui#readme",
   "devDependencies": {
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
