--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bilo-ui",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "XUI is a set of experimental ui elements and utilities for frontend web development.",
   "main": "dist/index.js",
   "scripts": {
@@ -25,6 +25,7 @@
     "babel-preset-react": "^6.24.1",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.4",
+    "file-loader": "^1.1.5",
     "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.5.3",
     "react": "^15.6.1",
@@ -35,6 +36,7 @@
     "webpack-dev-server": "^2.6.1"
   },
   "dependencies": {
+    "leaflet": "^1.2.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2"
   }
