--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,5 @@
 
   "terminal.integrated.scrollback": 10000,
   "terminal.integrated.cursorBlinking": true,
-  "terminal.integrated.cursorStyle":"line",
-  "terminal.integrated.confirmOnExit": true
+  "terminal.integrated.cursorStyle":"line"
 }
