--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bilo-ui",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "XUI is a set of experimental ui elements and utilities for frontend web development.",
   "main": "dist/index.js",
   "scripts": {
@@ -19,10 +19,12 @@
   },
   "homepage": "https://github.com/bilo-io/bilo-ui#readme",
   "devDependencies": {
+    "axios": "^0.16.2",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.4",
     "file-loader": "^1.1.5",
