--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "bilo-ui",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "description": "XUI is a set of experimental ui elements and utilities for frontend web development.",
   "main": "dist/index.js",
   "scripts": {
     "dev": "webpack -p --colors -w",
-    "deploy" : "npm unlink && npm publish",
+    "deploy": "npm unlink && npm publish",
     "build": "webpack -p",
     "prepublish": "npm run build"
   },
@@ -39,7 +39,9 @@
     "webpack-dev-server": "^2.6.1"
   },
   "dependencies": {
+    "highlight.js": "^9.12.0",
     "leaflet": "^1.2.0",
+    "marked": "^0.3.6",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2"
   }
