--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "webpack -p --colors -w",
-    "deploy": "npm unlink && npm publish",
+    "deploy": "npm unlink && npm build && npm publish",
     "build": "webpack -p",
     "prepublish": "npm run build"
   },
