--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "webpack -p --colors -w",
     "deploy": "npm unlink && npm build && npm publish",
     "build": "webpack -p",
-    "prepublish": "npm run build"
+    "prepublish": "npm run build",
+    "demo:dev": "webpack-dev-server -p --colors -w --config webpack.demo.config.js",
+    "demo:build": "webpack -p --config webpack.demo.config.js"
   },
   "repository": {
     "type": "git",
@@ -32,7 +34,7 @@
     "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.5.3",
     "react": "^16.1.0",
-    "react-dom": "^16.1.0",
+    "react-dom": "^16.2.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "webpack": "^3.4.1",
