--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "deploy": "npm unlink && npm build && npm publish",
     "build": "webpack -p",
     "prepublish": "npm run build",
-    "demo:dev": "webpack-dev-server -p --colors -w --config webpack.demo.config.js",
+    "demo:dev": "webpack-dev-server -w --color --inline --progress --config webpack.demo.config.js",
     "demo:build": "webpack -p --config webpack.demo.config.js"
   },
   "repository": {
@@ -32,9 +32,11 @@
     "css-loader": "^0.28.4",
     "file-loader": "^1.1.5",
     "html-webpack-plugin": "^2.30.1",
+    "jsx-to-string-2": "^1.0.0",
     "node-sass": "^4.5.3",
     "react": "^16.1.0",
     "react-dom": "^16.2.0",
+    "react-highlight.js": "^1.0.7",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "webpack": "^3.4.1",
