--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "webpack": "^3.4.1",
-    "webpack-dev-server": "^2.6.1"
+    "webpack-dev-server": "^2.6.1",
+    "webpack-visualizer-plugin": "^0.1.11"
   },
   "dependencies": {
     "highlight.js": "^9.12.0",
