--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build": "webpack -p",
     "prepublish": "npm run build",
     "demo:dev": "webpack-dev-server -w --color --inline --progress --config webpack.demo.config.js",
-    "demo:build": "webpack -p --config webpack.demo.config.js"
+    "demo:build": "rm -rf artifact && webpack -p --config webpack.demo.config.js && mkdir artifact && cp server.js ./artifact && cp -r ./demo ./artifact",
+    "demo:publish": "echo 'TODO: write code to publish updated kitchensink'",
+    "demo:serve": "node ./artifact/server.js"
   },
   "repository": {
     "type": "git",
@@ -44,6 +46,8 @@
     "webpack-visualizer-plugin": "^0.1.11"
   },
   "dependencies": {
+    "express": "^4.16.2",
+    "express-history-api-fallback": "^2.2.1",
     "highlight.js": "^9.12.0",
     "leaflet": "^1.2.0",
     "marked": "^0.3.6",
