--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.10",
   "description": "XUI is a set of experimental ui elements and utilities for frontend web development.",
   "main": "dist/index.js",
-  "engines" : {
+  "engines": {
     "node": "8.4.0",
     "npm": "5.3.0"
   },
@@ -44,6 +44,8 @@
     "react": "^16.1.0",
     "react-dom": "^16.2.0",
     "react-highlight.js": "^1.0.7",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "webpack": "^3.4.1",
