--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "demo:build": "rm -rf artifact && webpack -p --config webpack.demo.config.js && mkdir artifact && cp server.js ./artifact && cp -r ./demo ./artifact",
     "demo:publish": "git push heroku master",
     "demo:serve": "node ./artifact/server.js",
-    "static:build": "rm -rf artifact && webpack -p --config webpack.static.config.js && mkdir artifact && cp server.js ./artifact && cp -r ./demo ./artifact",
+    "docs:build": "rm -rf artifact && webpack -p --config webpack.static.config.js && mkdir artifact && cp server.js ./artifact && cp -r ./demo ./artifact",
     "start": "osascript ./scripts/dev_and_demo.scpt"
   },
   "repository": {
