--- a/package.json
+++ b/package.json
@@ -8,17 +8,19 @@
     "npm": "5.3.0"
   },
   "scripts": {
-    "dev": "webpack -p --colors -w",
     "deploy": "npm unlink && npm build && npm publish",
-    "build": "webpack -p",
     "prepublish": "npm run build",
+    "start": "osascript ./scripts/dev_and_demo.scpt",
+    "dev": "webpack -p --colors -w",
+    "dev:demo": "webpack-dev-server -w --color --inline --progress --config webpack.demo.config.js",
+    "build": "webpack -p",
+    "build:demo": "webpack -p --config webpack.demo.config.js && mkdir artifact && cp server.js ./artifact && cp -r ./demo ./artifact",
+    "build:docs": "webpack -p --config webpack.static.config.js",
     "serve": "node ./artifact/server.js",
-    "demo:dev": "webpack-dev-server -w --color --inline --progress --config webpack.demo.config.js",
-    "demo:build": "rm -rf artifact && webpack -p --config webpack.demo.config.js && mkdir artifact && cp server.js ./artifact && cp -r ./demo ./artifact",
-    "demo:publish": "git push heroku master",
-    "demo:serve": "node ./artifact/server.js",
-    "docs:build": "rm -rf artifact && webpack -p --config webpack.static.config.js && mkdir artifact && cp server.js ./artifact && cp -r ./demo ./artifact",
-    "start": "osascript ./scripts/dev_and_demo.scpt"
+    "clean":"rm -rf artifact && rm -rf dist",
+    "clean:docs": "rm -rf ./index.html && rm -rf ./assets && rm -rf ./docs.js",
+    "clean:demo": "rm -rf ./demo",
+    "clean:all": "npm run clean && npm run clean:docs && npm run clean demo"
   },
   "repository": {
     "type": "git",
