--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react": "^16.1.0",
     "react-dom": "^16.2.0",
     "react-highlight.js": "^1.0.7",
+    "react-loadable": "^5.3.1",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "sass-loader": "^6.0.6",
