updated build scripts

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "dev:demo": "webpack-dev-server -w --color --inline --progress --config webpack.demo.config.js",
     "dev:all": "yarn start",
     "build": "webpack -p",
-    "build:demo": "webpack -p --config webpack.demo.config.js && mkdir artifact && cp server.js ./artifact && cp -r ./demo ./artifact",
+    "build:demo": "yarn clean:demo && webpack -p --config webpack.docs.config.js && mv ./demo ./docs",
+    "build:server": "webpack -p --config webpack.docs.config.js && mkdir artifact && cp server.js ./artifact && cp -r ./demo ./artifact",
     "build:all": "yarn build && yarn build:demo",
     "clean": "rm -rf artifact && rm -rf dist",
     "clean:demo": "rm -rf ./demo",
