--- a/.gitconfig
+++ b/.gitconfig
@@ -1,15 +1,16 @@
 [core]
 	excludesfile = /Users/bilolwabona/.gitignore_global
-[difftool "gitkraken"]
+[difftool "sourcetree"]
 	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
 	path = 
-[mergetool "gitkraken"]
-	cmd = /Applications/GitKraken.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
+[mergetool "sourcetree"]
+	cmd = /Applications/SourceTree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
 	trustExitCode = true
 [user]
 	name = Bilo Lwabona
 	email = bilo.lwabona@gmail.com
 [alias]
+	# custom
 	pl = pull origin
 	ps = push origin
 	rhh = reset HEAD --hard
@@ -19,6 +20,7 @@
 	cl = clone
 	cm = commit -m
 	co = checkout
+	# recommended
 	br = branch 
 	diff = diff --word-diff
 	dc = diff --cached
@@ -35,6 +37,8 @@
 	# last commit
 	dl = "!git ll -1"
 	dlc = diff --cached
+	sortdiff = !sh -c 'git diff "$@" | grep "^[+-]" | sort --key=1.2 | uniq -u -s1'
+	new = !sh -c 'git log $1@{1}..$1@{0} "$@"'
 	# list aliases
 	alias = "!git config -l | grep alias | cut -c 7-"
 	la = "!git config -l | grep alias | cut -c 7-"
@@ -46,5 +50,3 @@
 	lasttag = describe --tags --abbrev=0
 	lt = describe --tags --abbrev=0
 	f = "!git ls-files | grep -i"
-  new = !sh -c 'git log $1@{1}..$1@{0} "$@"'
-
