--- a/package.json
+++ b/package.json
@@ -3,10 +3,7 @@
   "version": "0.0.11",
   "description": "XUI is a set of experimental ui elements and utilities for frontend web development.",
   "main": "dist/index.js",
-  "engines": {
-    "node": "8.4.0",
-    "npm": "5.3.0"
-  },
+  "engines": {},
   "scripts": {
     "deploy": "npm unlink && npm build && npm publish",
     "prepublish": "npm run build",
@@ -22,7 +19,7 @@
     "clean": "rm -rf artifact && rm -rf dist",
     "clean:demo": "rm -rf ./demo",
     "clean:all": "yarn clean && yarn clean:demo",
-    "bump": "semver-bump"
+    "bump": "node ./scripts/semver.js"
   },
   "repository": {
     "type": "git",
@@ -41,9 +38,11 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "colors": "^1.2.1",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.4",
     "file-loader": "^1.1.5",
+    "file-system": "^2.2.2",
     "html-webpack-plugin": "^2.30.1",
     "jsx-to-string-2": "^1.0.0",
     "node-sass": "^4.5.3",
@@ -53,6 +52,7 @@
     "react-loadable": "^5.3.1",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "readline": "^1.3.0",
     "sass-loader": "^6.0.6",
     "static-site-generator-webpack-plugin": "^3.4.1",
     "style-loader": "^0.18.2",
