--- a/package.json
+++ b/package.json
@@ -5,22 +5,22 @@
   "main": "dist/index.js",
   "engines": {},
   "scripts": {
-    "deploy": "npm unlink && npm build && npm publish",
-    "prepublish": "npm run build",
+    "deploy": "yarn unlink && yarn build && npm publish",
+    "bump": "node ./scripts/semver.js",
+    "release": "npm publish",
+    "prepublish": "yarn build",
     "start": "bash ./scripts/dev_and_demo.sh",
     "serve": "node ./artifact/server.js",
     "dev": "webpack -p --colors -w",
-    "dev:demo": "webpack-dev-server -w --color --inline --progress --config webpack.docs.config.js",
+    "dev:docs": "webpack-dev-server -w --color --inline --progress --config webpack.docs.config.js",
     "dev:all": "yarn start",
     "build": "webpack -p",
-    "build:demo": "yarn clean:demo && webpack -p --config webpack.docs.config.js && mv ./demo ./docs",
+    "build:docs": "yarn clean:demo && webpack -p --config webpack.docs.config.js && mv ./demo ./docs",
     "build:server": "webpack -p --config webpack.docs.config.js && mkdir artifact && cp server.js ./artifact && cp -r ./demo ./artifact",
-    "build:all": "yarn build && yarn build:demo",
+    "build:all": "yarn build && yarn build:docs",
     "clean": "rm -rf artifact && rm -rf dist",
-    "clean:demo": "rm -rf ./demo",
-    "clean:all": "yarn clean && yarn clean:demo",
-    "bump": "node ./scripts/semver.js",
-    "release": "node ./scripts/command.js"
+    "clean:docs": "rm -rf ./docs",
+    "clean:all": "yarn clean && yarn clean:docs"
   },
   "repository": {
     "type": "git",
