--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "build": "webpack -p",
     "build:docs": "yarn clean:docs && webpack --config webpack.docs.config.js && mv ./demo ./docs",
     "build:server": "webpack -p --config webpack.docs.config.js && mkdir artifact && cp server.js ./artifact && cp -r ./demo ./artifact",
-    "build:all": "yarn build && yarn build:docs && yarn build:server",
+    "build:all": "yarn clean:all && yarn build && yarn build:docs && yarn build:server",
     "clean": "rm -rf artifact && rm -rf dist",
-    "clean:docs": "rm -rf ./docs",
+    "clean:docs": "rm -rf docs && rm -rf demo",
     "clean:all": "yarn clean && yarn clean:docs"
   },
   "repository": {
