--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "colors": "^1.2.1",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.4",
+    "cypress": "^3.0.1",
     "file-loader": "^1.1.5",
     "file-system": "^2.2.2",
     "html-webpack-plugin": "^2.30.1",
