--- a/package.json
+++ b/package.json
@@ -45,8 +45,10 @@
     "cypress": "^3.0.1",
     "file-loader": "^1.1.5",
     "file-system": "^2.2.2",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^2.30.1",
     "jsx-to-string-2": "^1.0.0",
+    "markdown-loader": "^3.0.0",
     "node-sass": "^4.5.3",
     "react": "^16.1.0",
     "react-dom": "^16.2.0",
