--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "build:server": "webpack -p --config webpack.docs.config.js && mkdir artifact && cp server.js ./artifact && cp -r ./demo ./artifact",
     "clean": "rm -rf artifact && rm -rf dist",
     "clean:all": "yarn clean && yarn clean:docs",
-    "clean:docs": "rm -rf docs && rm -rf demo"
+    "clean:docs": "rm -rf docs && rm -rf demo",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook",
+    "test:output": "jest --json --outputFile=.jest-test-results.json",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -32,13 +36,24 @@
     "url": "https://github.com/bilo-io/bilo-ui/issues"
   },
   "homepage": "https://github.com/bilo-io/bilo-ui#readme",
+  "jest": {
+    "verbose": true
+  },
   "devDependencies": {
+    "@storybook/addon-actions": "^3.4.7",
+    "@storybook/addon-info": "^3.4.7",
+    "@storybook/addon-links": "^3.4.7",
+    "@storybook/addon-options": "^3.4.7",
+    "@storybook/addon-storysource": "^3.4.7",
+    "@storybook/addons": "^3.4.7",
+    "@storybook/react": "^3.4.7",
     "axios": "^0.16.2",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "babel-runtime": "^6.26.0",
     "child_process": "^1.0.2",
     "colors": "^1.2.1",
     "copy-webpack-plugin": "^4.0.1",
@@ -48,6 +63,7 @@
     "file-system": "^2.2.2",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^2.30.1",
+    "jest": "^23.1.0",
     "jsx-to-string-2": "^1.0.0",
     "markdown-loader": "^3.0.0",
     "node-sass": "^4.5.3",
@@ -60,6 +76,7 @@
     "readline": "^1.3.0",
     "sass-loader": "^6.0.6",
     "static-site-generator-webpack-plugin": "^3.4.1",
+    "storybook-addon-jest": "^0.0.1",
     "style-loader": "^0.18.2",
     "webpack": "^3.4.1",
     "webpack-dev-server": "^2.6.1",
