--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
     "build:all": "yarn clean:all && yarn build && yarn build:docs && yarn build:server",
     "build:docs": "yarn clean:docs && UI_ENV=production webpack --config webpack.docs.config.js && mv ./demo ./docs",
     "build:server": "webpack -p --config webpack.docs.config.js && mkdir artifact && cp server.js ./artifact && cp -r ./demo ./artifact",
+    "build:snapshots": "jest --updateSnapshot",
     "clean": "rm -rf artifact && rm -rf dist",
     "clean:all": "yarn clean && yarn clean:docs",
     "clean:docs": "rm -rf docs && rm -rf demo",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "test:output": "jest --json --outputFile=.jest-test-results.json",
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "repository": {
     "type": "git",
@@ -36,9 +38,6 @@
     "url": "https://github.com/bilo-io/bilo-ui/issues"
   },
   "homepage": "https://github.com/bilo-io/bilo-ui#readme",
-  "jest": {
-    "verbose": true
-  },
   "devDependencies": {
     "@storybook/addon-actions": "^3.4.7",
     "@storybook/addon-info": "^3.4.7",
@@ -49,6 +48,7 @@
     "@storybook/react": "^3.4.7",
     "axios": "^0.16.2",
     "babel-core": "^6.25.0",
+    "babel-jest": "^23.2.0",
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
@@ -59,11 +59,14 @@
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.4",
     "cypress": "^3.0.1",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "file-loader": "^1.1.5",
     "file-system": "^2.2.2",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^2.30.1",
     "jest": "^23.1.0",
+    "jest-fetch-mock": "^1.6.5",
     "jsx-to-string-2": "^1.0.0",
     "markdown-loader": "^3.0.0",
     "node-sass": "^4.5.3",
