--- a/package.json
+++ b/package.json
@@ -8,22 +8,21 @@
     "bump": "node ./scripts/semver.js",
     "release": "npm publish",
     "prepublish": "yarn build",
+    "storybook": "start-storybook -p 6006",
     "start": "bash ./scripts/dev_and_demo.sh",
     "serve": "node ./artifact/server.js",
     "dev": "webpack -p --colors -w",
     "dev:all": "yarn start",
-    "dev:docs": "UI_ENV=development yarn docs-build",
-    "docs-build": "webpack-dev-server -w --color --inline --config webpack.docs.config.js",
+    "dev:docs": "UI_ENV=development webpack-dev-server -w --color --inline --config webpack.static.js --open",
     "build": "webpack -p",
     "build:all": "yarn clean:all && yarn build && yarn build:docs && yarn build:server",
-    "build:docs": "yarn clean:docs && UI_ENV=production webpack --config webpack.docs.config.js && mv ./demo ./docs",
-    "build:server": "webpack -p --config webpack.docs.config.js && mkdir artifact && cp server.js ./artifact && cp -r ./demo ./artifact",
+    "build:docs": "yarn clean:docs && UI_ENV=production webpack --config webpack.static.js && mv ./demo ./docs",
+    "build:server": "webpack -p --config webpack.static.js && mkdir artifact && cp server.js ./artifact && cp -r ./demo ./artifact",
     "build:snapshots": "jest --updateSnapshot",
+    "build:storybook": "build-storybook",
     "clean": "rm -rf artifact && rm -rf dist",
     "clean:all": "yarn clean && yarn clean:docs",
     "clean:docs": "rm -rf docs && rm -rf demo",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
     "test:output": "jest --json --outputFile=.jest-test-results.json",
     "test": "jest",
     "test:watch": "jest --watch"
@@ -76,6 +75,7 @@
     "react-loadable": "^5.3.1",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "react-soundplayer": "^1.0.4",
     "readline": "^1.3.0",
     "sass-loader": "^6.0.6",
     "static-site-generator-webpack-plugin": "^3.4.1",
